--- a/Source code/Elysium/Elysium.csproj
+++ b/Source code/Elysium/Elysium.csproj
@@ -72,6 +72,8 @@
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
+    <NoWarn>
+    </NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -364,6 +366,10 @@
     <Compile Include="Controls\Window\WindowCommands.cs" />
     <Compile Include="Converters\ThicknessConverter.cs" />
     <Compile Include="Converters\IsGreaterThanConverter.cs" />
+    <Compile Include="Native\Interop.cs" />
+    <Compile Include="Native\Taskbar.cs" />
+    <Compile Include="Native\TaskbarPosition.cs" />
+    <Compile Include="Native\Windows.cs" />
     <Compile Include="Parameters\Design.cs" />
     <Compile Include="Extensions\Boxing helpers\NullableBoxingHelper.cs" />
     <Compile Include="Extensions\Collections\Extensions.cs" />
@@ -514,6 +520,16 @@
     <None Include="Parameters\Window.ru.xml">
       <DependentUpon>Window.cs</DependentUpon>
     </None>
+    <None Include="Extensions\Collections\IObservableDictionary.ru.xml">
+      <DependentUpon>IObservableDictionary.cs</DependentUpon>
+    </None>
+    <None Include="Extensions\Collections\ObservableKeyValuePair.ru.xml">
+      <DependentUpon>ObservableKeyValuePair.cs</DependentUpon>
+    </None>
+    <None Include="Extensions\Collections\ObservableDictionary.ru.xml">
+      <DependentUpon>ObservableDictionary.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Extensions\Tree helpers\LogicalTreeHelperExtensions.ru.xml">
       <DependentUpon>LogicalTreeHelperExtensions.cs</DependentUpon>
     </None>
@@ -631,6 +647,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Exceptions\InvalidStyleException.ru.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
