--- a/Source code/Elysium/Elysium.csproj
+++ b/Source code/Elysium/Elysium.csproj
@@ -372,6 +372,7 @@
     <Compile Include="Native\TaskbarPosition.cs" />
     <Compile Include="Native\Window.cs" />
     <Compile Include="Native\Windows.cs" />
+    <Compile Include="Parameters\Bullet.cs" />
     <Compile Include="Parameters\Design.cs" />
     <Compile Include="Extensions\Boxing helpers\NullableBoxingHelper.cs" />
     <Compile Include="Extensions\Collections\Extensions.cs" />
@@ -415,6 +416,7 @@
     <Compile Include="Converters\NumberPositiveToNegativeConverter.cs" />
     <Compile Include="Converters\ThicknessPositiveToNegativeConverter.cs" />
     <Compile Include="Converters\ThicknessToDoubleConverter.cs" />
+    <Compile Include="Extensions\ReSharper\JetBrains.Annotations.cs" />
     <Compile Include="Extensions\Boxing helpers\BooleanBoxingHelper.cs" />
     <Compile Include="Extensions\Boxing helpers\BoxingHelper.cs" />
     <Compile Include="Extensions\Boxing helpers\NullableBooleanBoxingHelper.cs" />
@@ -464,10 +466,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Elysium.tt</DependentUpon>
     </None>
+    <None Include="Exceptions\InvalidStyleException.ru.xml">
+      <DependentUpon>InvalidStyleException.cs</DependentUpon>
+    </None>
     <None Include="AccentBrushes.ru.xml">
       <DependentUpon>AccentBrushes.cs</DependentUpon>
     </None>
-    <Compile Include="Extensions\ReSharper\JetBrains.Annotations.cs" />
     <None Include="Theme.ru.xml">
       <DependentUpon>Theme.cs</DependentUpon>
     </None>
@@ -482,6 +486,9 @@
     </None>
     <None Include="Parameters\General.ru.xml">
       <DependentUpon>General.cs</DependentUpon>
+    </None>
+    <None Include="Parameters\Bullet.ru.xml">
+      <DependentUpon>Bullet.cs</DependentUpon>
     </None>
     <None Include="Parameters\CheckBox.ru.xml">
       <DependentUpon>CheckBox.cs</DependentUpon>
@@ -649,9 +656,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Exceptions\InvalidStyleException.ru.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
