--- a/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
+++ b/Source code/SDK/MSI/UI/Elysium.SDK.MSI.UI.csproj
@@ -104,6 +104,11 @@
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
+  <Target Name="Default">
+    <MSBuild.ExtensionPack.Framework.Assembly TaskAction="GetInfo" NetAssembly="..\..\Binary\$(Configuration)\AnyCPU\Elysium.dll">
+      <Output TaskParameter="OutputItems" ItemName="Elysium"/>
+    </MSBuild.ExtensionPack.Framework.Assembly>
+  </Target>
   <Choose>
     <When Condition="'$(BuildingInsideVisualStudio)' == 'true'">
       <ItemGroup>
@@ -116,7 +121,7 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Elysium, Version=1.5.751.0, Culture=neutral, PublicKeyToken=f8966962afac6b6d, processorArchitecture=MSIL">
+        <Reference Include="%(Elysium.FullName)">
           <HintPath>..\..\..\..\Binary\$(Configuration)\AnyCPU\Elysium.dll</HintPath>
           <Private>True</Private>
         </Reference>
@@ -196,6 +201,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
+  <PropertyGroup>
+    <MSBuildExtensionsPackPath>$(MSBuildExtensionsPath32)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks</MSBuildExtensionsPackPath>
+    <MSBuildExtensionsPackPath Condition="Exists('$(MSBuildExtensionsPath64)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks')">$(MSBuildExtensionsPath64)\ExtensionPack\4.0\MSBuild.ExtensionPack.tasks</MSBuildExtensionsPackPath>
+  </PropertyGroup>
+  <Import Project="$(MSBuildExtensionsPackPath)"/>
   <PropertyGroup>
     <PostBuildEvent>"..\..\..\..\..\Tools and Resources\Utilities\signtool\signtool.exe" sign /f "..\..\..\..\..\Source code\SigningKey.pfx" "UI.dll"</PostBuildEvent>
   </PropertyGroup>
