--- a/Elysium for .NET 4/Source code/Elysium.Notifications.Server/App.config
+++ b/Elysium for .NET 4/Source code/Elysium.Notifications.Server/App.config
@@ -32,10 +32,10 @@
       <service name="Elysium.Notifications.Server.NotificationManager" behaviorConfiguration="NotificationManagerBehavior">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8000/elysium/v1.5/notifications"/>
+            <add baseAddress="http://localhost:8000/elysium/v1.5/v4.0/notifications"/>
           </baseAddresses>
         </host>
-        <endpoint address="net.pipe://localhost/elysium/v1.5/notifications" binding="netNamedPipeBinding" contract="Elysium.Notifications.INotificationManager"/>
+        <endpoint address="net.pipe://localhost/elysium/v1.5/v4.0/notifications" binding="netNamedPipeBinding" contract="Elysium.Notifications.INotificationManager"/>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
