--- a/Main/Source code/SDK/NuGet/Elysium.Theme.1.5.nuspec
+++ b/Main/Source code/SDK/NuGet/Elysium.Theme.1.5.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Elysium.Theme</id>
-        <version>1.5</version>
+        <version>2.0</version>
         <title>Elysium</title>
         <authors>Alex F. Sherman &amp; Codeplex Community</authors>
         <owners>Alex F. Sherman</owners>
@@ -11,7 +11,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Elysium is library that implements Metro style for Windows Presentation Foundation applications.</description>
         <summary />
-        <releaseNotes>Elysium 1.5 EAP is not backward compatible with previous version of Elysium. For more information, see documentation.</releaseNotes>
+        <releaseNotes>Elysium 2.0 RTM is not backward compatible with previous version of Elysium. For more information, see documentation.</releaseNotes>
         <copyright>Copyright © Alex F. Sherman &amp; Codeplex Community 2011-2012</copyright>
         <language>en-US</language>
         <tags>Elysium WPF UI Theme Theming Metro Modern Windows Phone 8</tags>
